# web-transcript-parser

./: Cargo.toml  README.md
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/context/src/http/: commit.rs  context.rs  enforce.rs  mod.rs  transcript.rs
crates/context/src/json/: commit.rs  context.rs  enforce.rs  mod.rs
crates/context/src/tls/: connection.rs
crates/context/src/transcript/: commit.rs  mod.rs  transcript.rs
crates/spanner/: Cargo.toml
crates/spanner/src/: lib.rs
crates/spanner/src/http/: mod.rs  span.rs  types.rs
crates/spanner/src/json/: json.pest  mod.rs  span.rs  types.rs  visit.rs
