[workspace]
members = [
    "crates/context",
    "crates/spanner",
]
resolver = "2"

[workspace.dependencies]
spanner = { path = "crates/spanner" }
context = { path = "crates/context" }

bytes = { version = "1.4" }
rangeset = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
pest = { version = "2.7" }
pest_derive = { version = "2.7" }
http = { version = "=1.1" }
url = { version = "2.4" }

bincode = { version = "1.3" }
rstest = { version = "0.26" }