[package]
name = "http-transcript-context"
version = "0.1.0"
edition = "2021"
description = "Contextual integrity for HTTP transcripts"
license = "MIT"

[dependencies]
bytes = { workspace = true }
spanner = { workspace = true }
http = { workspace = true }
rangeset = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
bincode = { workspace = true }