[package]
name = "spannner"
version = "0.1.0"
edition = "2021"
description = "Parsing with span information"
license = "MIT"

[features]
default = []
serde = ["dep:serde", "bytes/serde", "rangeset/serde"]

[dependencies]
rangeset = { workspace = true }

bytes = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }

httparse = "1.8"
pest = { version = "2.7" }
pest_derive = { version = "2.7" }
